@@ -1,5 +1,5 @@
 id name chief age
-0 jack 0 22.1
+0 jack 0 22
 1 carl 0 20
 2 john 1 30
 3 dean 1 33
