@@ -27,3 +27,4 @@
 
 0.5
 - Added support for float numbers
+- Added support for dates
